# squirrelops-home

./: .gitignore  README.md
app/: Package.swift  build-app.sh
sensor/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
sensor/config/: home_defaults.yaml
sensor/resources/: com.squirrelops.sensor.plist
sensor/scripts/: seed_marketing_data.sql
sensor/signatures/: device_signatures.json
sensor/src/clownpeanuts/: __init__.py
sensor/src/clownpeanuts/tarpit/: throttle.py
sensor/src/squirrelops_home_sensor/: __init__.py  __main__.py  app.py  mdns.py  models.py  profiles.py  tls.py  tls_client_auth.py
sensor/src/squirrelops_home_sensor/alerts/: __init__.py  decoy_handler.py  dispatcher.py  incidents.py  retention.py  types.py
sensor/src/squirrelops_home_sensor/api/: auth.py  deps.py  routes_alerts.py  routes_config.py  routes_decoys.py  routes_devices.py  routes_pairing.py  routes_ports.py  routes_scouts.py  routes_system.py  ws.py
sensor/src/squirrelops_home_sensor/config/: __init__.py
sensor/src/squirrelops_home_sensor/db/: __init__.py  migrations.py  queries.py  schema.py
sensor/src/squirrelops_home_sensor/decoys/: canary.py  credentials.py  orchestrator.py
sensor/src/squirrelops_home_sensor/devices/: __init__.py  baseline.py  classifier.py  decoy_filter.py  llm_classifier.py  manager.py  oui_db.py  review.py  signatures.py
sensor/tests/: conftest.py
sensor/tests/integration/: conftest.py  test_alert_dispatcher.py  test_alert_retention.py  test_app_factory.py  test_auto_deploy.py  test_db_queries.py  test_db_schema.py  test_decoy_alert_handler.py  test_decoy_orchestrator.py  test_dev_server_decoy.py  test_device_manager.py  test_dns_canary.py  test_entry_point.py  test_event_bus.py  test_file_share_decoy.py  test_ha_enrichment.py  test_home_assistant_decoy.py  test_incidents.py  test_routes_alerts.py  test_routes_config.py  test_routes_decoys.py  test_routes_devices.py  test_routes_pairing.py  test_routes_system.py  test_scan_loop.py  test_ws.py
sensor/tests/unit/: test_alert_dispatcher.py  test_alert_types.py  test_apns_handler.py  test_base_decoy.py  test_baseline.py  test_classifier.py  test_composite.py  test_config.py  test_credentials.py  test_device_review.py  test_docker_packaging.py  test_home_assistant_client.py  test_ip_allocator.py  test_llm_classifier.py  test_matcher.py  test_mdns.py  test_mdns_browser.py  test_migrations.py  test_mimic_mdns.py  test_mimic_server.py  test_mimic_templates.py  test_models.py  test_oui_generation.py  test_plugin_loader.py  test_port_forward.py  test_port_risks.py  test_port_scanner.py  test_port_scanner_banners.py  test_privileged.py  test_profiles.py  test_routes_ports.py  test_scaffolding.py  test_scout_engine.py  test_secret_store.py  test_security_analyzer.py  test_service_names.py  test_signals.py  test_signatures.py  test_ssdp_scanner.py  test_tls.py
(+150 files in other folders)
