[project]
name = "squirrelops-home-sensor"
version = "1.1.3"
description = "SquirrelOps Home network security sensor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "scapy>=2.6.0",
    "cryptography>=44.0.0",
    "zeroconf>=0.136.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "pyyaml>=6.0.0",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squirrelops_home_sensor", "src/clownpeanuts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "ASYNC109",
    "ASYNC240",
    "B008",
    "B017",
    "B904",
    "B905",
    "E402",
    "E501",
    "E741",
    "N814",
    "N817",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM117",
    "SIM118",
    "UP042",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportReturnType = "warning"
